# Project_Graphs

./: BellmanFord.cpp  BellmanFord.h  CMakeLists.txt  Data.cpp  Data.h  Dijkstra.cpp  Dijkstra.h  InitTab.cpp  InitTab.h  Kruskal.cpp  Kruskal.h  ListaKraw.cpp  ListaKraw.h  MacierzInc.cpp  MacierzInc.h  Menu.cpp  Menu.h  Prima.cpp  Prima.h  WczytTab.cpp  WczytTab.h  dane.txt  main.cpp
